[package]
name = "rebar-rp"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Wtoll/rebar"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embedded-hal = "1.0.0"
panic-probe = "1.0.0"
rebar = "0.1.0"
rp2040-hal = "0.11.0"
rp2040-pac = "0.6.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"

[patch.crates-io]
rebar = {path = "../rebar"}
